# todo-list

./: .gitignore  README.md  format.sh  pyproject.toml
todo-list/: config.py  const.py  database.py  main.py  schemas.py
todo-list/routes/: users.py
